--- a/rev-com-server/pom.xml
+++ b/rev-com-server/pom.xml
@@ -81,7 +81,11 @@
       <artifactId>spring-boot-starter-aop</artifactId>
       <version>2.6.3</version>
     </dependency>
-
+    <dependency>
+      <groupId>com.github.pagehelper</groupId>
+      <artifactId>pagehelper</artifactId>
+      <version>5.2.0</version>
+    </dependency>
   </dependencies>
 
 </project>
