--- a/rev-com-client/package.json
+++ b/rev-com-client/package.json
@@ -10,15 +10,16 @@
     "@types/node": "^16.11.33",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
+    "@types/react-router-dom": "^5.3.3",
     "@types/redux-immutable": "^4.0.3",
     "@types/styled-components": "^5.1.25",
+    "antd": "^4.20.6",
     "axios": "^0.27.2",
     "immutable": "^4.0.0",
     "prettier": "^2.6.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.1",
-    "react-router-config": "^5.1.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
