--- a/rev-com-client/package.json
+++ b/rev-com-client/package.json
@@ -13,6 +13,8 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/redux-immutable": "^4.0.3",
     "@types/styled-components": "^5.1.25",
+    "@wangeditor/editor": "^5.1.0",
+    "@wangeditor/editor-for-react": "^1.0.3",
     "antd": "^4.20.6",
     "axios": "^0.27.2",
     "immutable": "^4.0.0",
